--- a/api/external/api-protect-agent.yaml
+++ b/api/external/api-protect-agent.yaml
@@ -12,6 +12,8 @@ tags:
   - name: host-agent-update-controller
     description: Host Agent Update Controller
   - name: agent-lan-free-controller
+  - name: host-agent-internal-controller
+  - name: check-health-controller
 paths:
   /v1/host-agent:
     post:
@@ -344,43 +346,6 @@ paths:
       security:
         - Authorization:
             - global
-  /v1/host-agent/alter-register:
-    post:
-      x-product: OceanProtect X
-      description: 客户端代理自动注册v2，有代理和无代理
-      x-dm-role: 'Y'
-      x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'Y'
-      x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
-      operationId: host-agent_alter-register
-      consumes:
-        - application/x-www-form-urlencoded
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          required: true
-          description: Access token
-          type: string
-        - name: HostRegisterInfo
-          in: body
-          required: true
-          description: 主机注册参数
-          schema:
-            $ref: '#/definitions/HostRegisterInfo'
-      responses:
-        '200':
-          description: OK
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '404':
-          description: Not Found
   /v1/internal/agent/cluster-ip:
     put:
       x-product: OceanProtect X
@@ -600,6 +565,124 @@ paths:
             type: string
         '404':
           description: Not Found
+          schema:
+            type: string
+  /v1/host-agent/tag:
+    put:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      tags:
+        - client-manager-api
+      summary: 批量设置备注信息
+      description: 批量为主机设置备注信息，主机可以是在线、离线、迁移中等各种状态
+      operationId: updateTagInfoUsingPUT
+      parameters:
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: Access token
+          type: string
+        - name: resourceIds
+          in: query
+          required: true
+          type: string
+          description: 主机resourceIdList，以,隔开
+        - name: tagInfo
+          in: query
+          required: false
+          type: string
+          description: 批量为主机设置的备注信息，最大64字符，不传入的话默认值是空字符串""
+      responses:
+        '200':
+          description: 无返回值
+  /v1/internal/host-agent/log/action/export:
+    post:
+      tags:
+        - host-agent-internal-controller
+      summary: 导出Agent日志
+      description: 导出Agent日志
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'Y'
+      operationId: exportAgentLogUsingPost
+      parameters:
+        - name: exportLogParam
+          in: body
+          required: false
+          schema:
+            $ref: '#/definitions/AgentExportLogParam'
+      responses:
+        '200':
+          description: 无返回值
+  /v1/host-agent/update/download:
+    get:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'N'
+      tags:
+        - client-manager-api
+      summary: 用于agent 更新下载接口（证书双向认证），加入白名单
+      description: 用于agent 更新下载接口（证书双向认证），加入白名单
+      operationId: temporaryUpdateDownloadUsingGET
+      parameters:
+        - name: uuid
+          in: query
+          required: true
+          description: uuid
+          type: string
+          minLength: 1
+          maxLength: 1024
+      responses:
+        '200':
+          description: ResponseEntity<FileSystemResource>
+          schema:
+            $ref: '#/definitions/ResponseEntity'
+  /internal/crm/health:
+    get:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      tags:
+        - check-health-controller
+      summary: 内部调用接口，k8s探针检测服务不可用时，重启
+      description: 内部调用接口，k8s探针检测服务不可用时，重启
+      operationId: checkHealthUsingGet
+      responses:
+        '200':
+          description: return "ok"
           schema:
             type: string
 securityDefinitions:
@@ -1144,3 +1227,20 @@ definitions:
       fcPorts:
         description: FC端口信息
         $ref: '#/definitions/AgentLanFreeFcPortView'
+  AgentExportLogParam:
+    type: object
+    required:
+      - recordId
+      - agentIds
+    properties:
+      recordId:
+        type: string
+        description: 记录ID
+      agentIds:
+        type: string
+        description: 主机列表
+  ResponseEntity:
+    type: object
+    properties:
+      status:
+        type: object
